# SADEM_ws

./: PPM.py  README.md  controller_setpoint.py
rosbags/: bag1.bag
src/: CMakeLists.txt
src/autonomous_sadem/: CMakeLists.txt  package.xml  setup.py
src/autonomous_sadem/launch/: run_ubuntu.launch  run_windows.launch  zed_imu_slam.launch
src/autonomous_sadem/src/autonomous_sadem/: control.py  helpers.py  imu_fetch.py  joystick.py  joystick_ubuntu.py  pid.py  ppm.py  slam.py  slam.py.save
src/nodes/: imu_fetch.py  roscopter.py  roscopter_2.py
src/roscopter/msg_gen/cpp/include/roscopter/: Attitude.h  Control.h  Mavlink_RAW_IMU.h  RC.h  State.h  VFR_HUD.h
src/src/roscopter/msg/: _Attitude.py  _Control.py  _Mavlink_RAW_IMU.py  _RC.py  _State.py  _VFR_HUD.py  __init__.py
src/zed_stream/: CMakeLists.txt  package.xml  test_zed.py
